OJ1.7/tmp_files/tmp_1621937696.err
./tmp_files/tmp_1621937696.cpp: In member function ‘std::string Slution::slute(std::string)’:
./tmp_files/tmp_1621937696.cpp:12:1: error: ‘fdsklajf’ was not declared in this scope
 fdsklajf
 ^~~~~~~~
./tmp_files/tmp_1621937696.cpp:12:1: note: suggested alternative: ‘fwscanf’
 fdsklajf
 ^~~~~~~~
 fwscanf
./tmp_files/tmp_1621937696.cpp:13:9: warning: no return statement in function returning non-void [-Wreturn-type]
         }
         ^
